PUT ENDPOINT bugfix